--- a/src/fxml/sample.fxml
+++ b/src/fxml/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -8,37 +9,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #4169e1;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller">
    <children>
-      <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1280.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <Button fx:id="searchStudent" layoutX="14.0" layoutY="293.0" mnemonicParsing="false"  prefHeight="38.0" prefWidth="236.0" text="Поиск студентов" />
-      <Button fx:id="deleteStudent" layoutX="14.0" layoutY="341.0" mnemonicParsing="false" onAction="#deleteStudentButton" prefHeight="38.0" prefWidth="236.0" text="Удаление студента" />
-      <Button fx:id="addStudent" layoutX="14.0" layoutY="390.0" mnemonicParsing="false" onAction="#pressAddStudentButton" prefHeight="38.0" prefWidth="236.0" text="Добавить студента" />
-      <TableView fx:id="studentsTableView" layoutX="301.0" layoutY="47.0" prefHeight="651.0" prefWidth="959.0">
+
+      <Button fx:id="deleteStudent" layoutX="24.0" layoutY="322.0" mnemonicParsing="false" onAction="#deleteStudentButton" prefHeight="38.0" prefWidth="236.0" style="-fx-background-color: #FFFFFF;" text="Удалить студента">
+         <font>
+            <Font name="SansSerif Bold" size="14.0" />
+         </font></Button>
+      <Button fx:id="addStudent" layoutX="24.0" layoutY="378.0" mnemonicParsing="false" onAction="#pressAddStudentButton" prefHeight="38.0" prefWidth="236.0" style="-fx-background-color: #FFFFFF;" text="Добавить студента">
+         <font>
+            <Font name="SansSerif Bold" size="14.0" />
+         </font></Button>
+      <TableView fx:id="studentsTableView" layoutX="307.0" layoutY="35.0" prefHeight="651.0" prefWidth="959.0">
         <columns>
           <TableColumn fx:id="col_id_student" editable="false" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="col_name_student" prefWidth="194.0" text="Имя" />
             <TableColumn fx:id="col_surname_student" prefWidth="210.0" text="Фамилия" />
             <TableColumn fx:id="col_fathersName_student" prefWidth="179.0" text="Отчество" />
-            <TableColumn fx:id="col_birthdate_student" prefWidth="163.0" text="Дата рождения" />
+            <TableColumn fx:id="col_birthday_student" prefWidth="163.0" text="Дата рождения" />
             <TableColumn fx:id="col_group_student" prefWidth="137.0" text="Группа" />
         </columns>
       </TableView>
